force-app/main/default/objects/TestDrive__c/TestDrive__c.object-meta.xml
<CustomObject>
    <description>Stores test drive booking records created via the Agentforce WhatsApp agent. Replaces the Automotive Cloud standard TestDrive object when the Dealer Management feature is not licensed.</description>
    <label>Test Drive</label>
    <nameField>
        <displayFormat>TD-{00000}</displayFormat>
        <label>Test Drive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Drives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>