force-app/main/default/objects/TestDrive__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <description>Captures the reason provided by the customer when cancelling a test drive booking via the Agentforce WhatsApp agent. Used for analytics and dealer reporting.</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Request</fullName>
            </value>
            <value>
                <fullName>Schedule Conflict</fullName>
            </value>
            <value>
                <fullName>Found Another Dealership</fullName>
            </value>
            <value>
                <fullName>Vehicle No Longer Available</fullName>
            </value>
            <value>
                <fullName>Purchased Another Vehicle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>