force-app/main/default/objects/TestDrive__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <label>Dealer</label>
    <description>Lookup to the Account record (Dealer record type) for the dealership assigned to host this test drive. Determined by the FindDealershipByZipCode Flow using the customer ZIP code captured in the Agentforce conversation.</description>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Test Drives (Dealer)</relationshipLabel>
    <relationshipName>Test_Drives_Dealer</relationshipName>
</CustomField>