force-app/main/default/objects/TestDrive__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <description>Lookup to the Lead record representing the customer who booked this test drive. Set during CreateTestDriveBooking Flow via upsert on the Lead object.</description>
    <type>Lookup</type>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Test Drives (Lead)</relationshipLabel>
    <relationshipName>Test_Drives_Lead</relationshipName>
</CustomField>