force-app/main/default/objects/TestDrive__c/fields/Previous_Test_Drive_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Test_Drive_Date__c</fullName>
    <description>Stores the original Test_Drive_Date__c value before a reschedule operation. Updated by the RescheduleTestDrive Flow each time the appointment is moved. Provides a historical audit trail of all previous appointment times for this booking.</description>
    <label>Previous Test Drive Date</label>
    <type>DateTime</type>
</CustomField>