force-app/main/default/objects/TestDrive__c/fields/Reschedule_Count__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Tracks the total number of times this test drive booking has been rescheduled by the customer via the Agentforce WhatsApp agent. Incremented by 1 each time the RescheduleTestDrive Flow runs. Used for analytics to identify friction in scheduling.</description>
    <label>Reschedule Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>