force-app/main/default/objects/TestDrive__c/fields/Test_Drive_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive_Date__c</fullName>
    <label>Test Drive Date</label>
    <description>The preferred date and time for the test drive appointment, as provided by the customer during the Agentforce WhatsApp conversation. Updated by the RescheduleTestDrive Flow when the customer reschedules.</description>
    <type>DateTime</type>
</CustomField>